--- a/AdminWeb/Areas/Admin/Views/Shared/_HeaderPartial.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Shared/_HeaderPartial.cshtml
@@ -111,11 +111,7 @@
                 </li>
 
 
-                <li>
-                <a asp-action="Logout" asp-controller="Account">
-                        <i class="fa fa-sign-out"></i> Log out
-                    </a>
-                </li>
+            <li><a asp-action="Logout" asp-controller="Account" onclick="return confirm('Bạn có chắc chắn muốn đăng xuất không?');">Logout</a></li>
             </ul>
 
         </nav>
