--- a/AdminWeb/Areas/Admin/Views/Shared/_NotificationPartial.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Shared/_NotificationPartial.cshtml
@@ -1,13 +1,13 @@
-﻿@if (TempData["success"] != null)
-{
-    <div class="alert alert-success notification">
-        @TempData["success"]
-    </div>
+﻿@{
+    var success = TempData["SuccessMessage"];
+    var error = TempData["ErrorMessage"];
 }
 
-@if (TempData["error"] != null)
+@if (success != null)
 {
-    <div class="alert alert-danger notification">
-        @TempData["error"]
-    </div>
+    <div class="alert alert-success">@success</div>
+}
+@if (error != null)
+{
+    <div class="alert alert-danger">@error</div>
 }
