--- a/AdminWeb/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
@@ -1,4 +1,5 @@
-﻿<nav class="navbar-default navbar-static-side" role="navigation">
+﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+<nav class="navbar-default navbar-static-side" role="navigation">
     <div class="sidebar-collapse">
         <ul class="nav metismenu" id="side-menu">
             <li class="nav-header">
@@ -13,16 +14,23 @@
                                 {
                                     <strong class="font-bold">Hello, @User.Identity.Name</strong>
                                 }
-                               
-                            </span> <span class="text-muted text-xs block">Art Director <b class="caret"></b></span>
+
+                                <span class="text-muted text-xs block">
+                                    @HttpContextAccessor.HttpContext.Session.GetString("AdminName") 
+                                    <b class="caret"></b>
+                                </span>
                         </span>
                     </a>
                     <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                        <li><a href="profile.html">Profile</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin" asp-controller="Profile" asp-action="Index">
+                                <i class="bi bi-person-circle"></i> Profile
+                            </a>
+                        </li>
                         <li><a href="contacts.html">Contacts</a></li>
                         <li><a href="mailbox.html">Mailbox</a></li>
                         <li class="divider"></li>
-                        <li><a asp-action="Logout" asp-controller="Account">Logout</a></li>
+                        <li><a asp-action="Logout" asp-controller="Account" onclick="return confirm('Bạn có chắc chắn muốn đăng xuất không?');">Logout</a></li>
                     </ul>
                 </div>
                 <div class="logo-element">
