--- a/AdminWeb/Areas/Admin/Views/Shipping/Delete.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Shipping/Delete.cshtml
@@ -47,6 +47,19 @@
 
                             <dt><i class="fa fa-tag"></i> Ngày Dự Kiến:</dt>
                             <dd><strong>@Model.EstimatedDays</strong></dd>
+
+                            <dt><i class="fa fa-user"></i> Người nhận:</dt>
+                            <dd><strong>@Model.RecipientName</strong></dd>
+
+                            <dt><i class="fa fa-phone"></i> Số điện thoại:</dt>
+                            <dd><strong>@Model.PhoneNumber</strong></dd>
+
+                            <dt><i class="fa fa-envelope"></i> Email:</dt>
+                            <dd><strong>@Model.Email</strong></dd>
+
+                            <dt><i class="fa fa-calendar"></i> Ngày tạo:</dt>
+                            <dd><strong>@Model.CreatedAt.ToString("dd/MM/yyyy")</strong></dd>
+
                         </dl>
                     </div>
                 </div>
