--- a/AdminWeb/Areas/Admin/Views/Shipping/Edit.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Shipping/Edit.cshtml
@@ -26,6 +26,29 @@
 
                     @* Validation summary - hiển thị lỗi chung *@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="RecipientName" class="col-sm-2 control-label"></label>
+                        <div class="col-sm-10">
+                            <input asp-for="RecipientName" class="form-control" placeholder="Nhập tên người nhận..." />
+                            <span asp-validation-for="RecipientName" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="PhoneNumber" class="col-sm-2 control-label"></label>
+                        <div class="col-sm-10">
+                            <input asp-for="PhoneNumber" class="form-control" placeholder="Nhập số điện thoại..." />
+                            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Email" class="col-sm-2 control-label"></label>
+                        <div class="col-sm-10">
+                            <input asp-for="Email" class="form-control" placeholder="Nhập email..." />
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                    </div>
 
                     <div class="form-group">
                         <label asp-for="Address" class="col-sm-2 control-label"></label>
