--- a/AdminWeb/Areas/Admin/Views/Order/Edit.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Order/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model AdminWeb.Areas.Admin.Models.Order
+@model AdminWeb.Areas.Admin.Models.Order
 
 @{
     ViewData["Title"] = "Cập nhật đơn hàng";
@@ -11,10 +11,15 @@
     <input type="hidden" asp-for="OrderId" />
 
     <div class="mb-3">
-        <label asp-for="UserId" class="form-label"></label>
-        <input readonly asp-for="UserId" class="form-control" />
-        <span asp-validation-for="UserId" class="text-danger"></span>
+        <label class="form-label">Tên tài khoản & Người nhận</label>
+        <input type="text" readonly class="form-control" value="@ViewBag.UserAndRecipient" />
     </div>
+
+    <div class="mb-3">
+        <label class="form-label">Địa chỉ giao hàng</label>
+        <input type="text" readonly class="form-control" value="@ViewBag.ShippingAddress" />
+    </div>
+
 
     <div class="mb-3">
         <label asp-for="OrderDate" class="form-label"></label>
@@ -23,6 +28,17 @@
         <span asp-validation-for="OrderDate" class="text-danger"></span>
     </div>
 
+
+
+
+    <div class="mb-3">
+        <label asp-for="TotalAmount" class="form-label"></label>
+        <input readonly asp-for="TotalAmount" type="number" step="0.01" class="form-control" />
+        <span asp-validation-for="TotalAmount" class="text-danger"></span>
+    </div>
+
+    <input type="hidden" asp-for="UserId" />
+    <input type="hidden" asp-for="ShippingId" />
     <div class="mb-3">
         <label asp-for="Status" class="form-label">Trạng thái</label>
         <select asp-for="Status" class="form-control" asp-items="ViewBag.statusList">
@@ -31,21 +47,7 @@
         <span asp-validation-for="Status" class="text-danger"></span>
     </div>
 
-
-
-
-    <div class="mb-3">
-        <label asp-for="TotalAmount" class="form-label"></label>
-        <input readonly  readonly asp-for="TotalAmount" type="number" step="0.01" class="form-control" />
-        <span asp-validation-for="TotalAmount" class="text-danger"></span>
-    </div>
-
-    <div class="mb-3">
-        <label asp-for="ShippingId" class="form-label"></label>
-        <input readonly asp-for="ShippingId" class="form-control" />
-        <span asp-validation-for="ShippingId" class="text-danger"></span>
-    </div>
-
+    <br/>
     <button type="submit" class="btn btn-primary">Lưu thay đổi</button>
     <a asp-action="Index" class="btn btn-secondary">Quay lại</a>
 </form>
